--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "communityconnect-frontend",
-  "homepage":"http://hybrid.srishticampus.in/community_connect/",
+  "homepage":"http://hybrid.srishticampus.in/community_connect2/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
